implemented mock getContentMetadata function

--- a/styles/page-header.module.scss
+++ b/styles/page-header.module.scss
@@ -12,11 +12,14 @@
 }
 
 // *****************************************************************
-// Header Outline
+// Header Outline (or Surface)
 // *****************************************************************
 .pageHeaderOutline {
+  border: 2px solid black;
   background-color: white !important;
   box-shadow: 0 8px 6px -6px rgb(0 0 0 / 40%);
+  display: flex;
+  justify-content: center;
   min-height: 5rem;
   top: 0;
   // width: 100vw;
@@ -24,21 +27,33 @@
 }
 
 // *****************************************************************
-// Header container classes for header components
+// Container around pageHeaderContainer to control width
+// *****************************************************************
+.pageHeaderContainerWidth {
+  width: 65%;
+  margin: 0 auto 0 auto;  /* keeps it centered */
+
+  @media only screen and (min-width: $mobile-min) and (max-width: $mobile-max) {
+    width: 100%;
+  }  
+}
+
+
+// *****************************************************************
+// Container classes for header components
 // *****************************************************************
 .pageHeaderContainer {
   align-items: center;
   display: flex;
   justify-content: space-between;
-  margin: 0 10%;
+  // margin: 0 10%;
+  // width: 100%;
   // transition: all ease-in 1000ms;
   z-index: 10;
   
-
   @media only screen and  (max-width: 768px) {
     margin: 0 0;
-   }  
-
+  }  
 }
 
 .topNavLinks {
