--- a/styles/rosystyle.scss
+++ b/styles/rosystyle.scss
@@ -741,13 +741,13 @@ This files contents are outlined below>>>>>
        top: -53px;
        color: #fff;
        padding: 20px 24px 20px;
-       font-size: 40px;
-       font-weight: 500;
+       font-size: 38px;
+       font-weight: 400;
        text-align: center;
    }
    .month {
      display: block;
-    //  margin-top: -2px;
+     margin-top: 4px;
      font-size: 20px;
      font-weight: 400;
    }
