moved all blog components from pages to components/blog directory

--- a/styles/normalize.scss
+++ b/styles/normalize.scss
@@ -13,7 +13,7 @@ html {
 body {
   // color: $dark-grey;
   background-color: white;
-  font-family: 'Lato', 'Arial', 'sans-serif', 'Roboto';
+  font-family: 'Lato', 'Roboto', 'Arial', 'sans-serif';
   font-size: $m-size;
   line-height: 1.6;
 }
