--- a/components/pagination/Paginator/styles.module.scss
+++ b/components/pagination/Paginator/styles.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/settings.scss';
+@import '../../../styles/settings.scss';
 
 /* This is style is common to all link elements */
 .forLink {
