started creating 2 utils for sitemap and filesystem functions

--- a/styles/blogdetail.module.scss
+++ b/styles/blogdetail.module.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   width: 100%;
   margin-bottom: 3rem;
+  font-family: Lato;
 }
 
 /* second level container: contains the contentContainer and the rightSideAds */
