created animated link button and migrated about-page

--- a/styles/axolotstyle.scss
+++ b/styles/axolotstyle.scss
@@ -2461,6 +2461,24 @@ p {
         }
     }
 }
+
+/* Below styles added by DB in nextjs implementation */
+
+.footer-sections-container {
+  width: 75%;
+  display: flex; 
+  justify-content: center;
+}
+
+.footer-section-width {
+  width: 20rem;
+}
+
+.footer-area-positioning {
+  display: flex;
+  justify-content: center;
+}
+
 /* ==============
     End Footer CSS 
 ==================================== */
