migrated helping-hands resource page

--- a/components/formatting/BannerTitleContainer/styles.module.scss
+++ b/components/formatting/BannerTitleContainer/styles.module.scss
@@ -52,5 +52,8 @@
   (actual title component) around the selected quadrant */
 .banner-title {
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
