--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -47,6 +47,9 @@
     $font-size-xxlarge: 2.60rem;
     $font-size-xxxlarge: 3rem;
 
+// font family
+    $font-family: 'Lato', 'Roboto', 'Arial', 'sans-serif';
+    
 // Spacing
     $xs-size: .25rem;
     $s-size: 1.2rem;
@@ -76,9 +79,4 @@
     $tablet-breakpoint: 48rem;       // equals 768px
     $desktop-breakpoint: 60rem;       // equals 960px
     $desktop-breakpoint-lg: 76.5rem;    // equals 1224px
-
-   
-
-
-
 
