--- a/styles/features.module.scss
+++ b/styles/features.module.scss
@@ -12,69 +12,82 @@
 /* This container for the text block in top section of the features pages */
 .featuresTextBlock {
     font-family: Lato;
-    padding-left: 0 0 0 25rem;
-    margin-left: 8rem;
-    // margin-top: 12rem;
+    padding-top: 0%;
+    padding-left: 10%;
     text-align: left;
-
-    @media screen and (min-width: 959px) and (max-width: 2024px) {
-      margin-top: 8rem;
-    }
 }
 
 /* Takes care of adjusting the banner title based on size. 
    This style is used along with the BannerImageWithText component */
 .responsive-banner-title {
 
+  @media screen and (max-width: 760px) {
+    padding-left: 7%;
+  }
+
+  @media screen and (max-width: 600px) {
+    margin-top: -1rem;
+  }
+
+  @media screen and (max-width: 414px) {
+    margin-top: -1.3rem;
+  }
+
+  @media screen and (max-width: 319.98px) {
+    margin-top: -1.8rem;
+  }
+
+
+
   /* used in event screen is wider than large desktops */
-  @media screen and (min-width: 1600px) and (max-width: 2600px) {
-    margin-left: 4.5rem;
-    margin-top: 12rem;
-  }
+//   @media screen and (min-width: 1600px) and (max-width: 2600px) {
+//     margin-left: 4.5rem;
+//     margin-top: 12rem;
+//   }
 
-  /* desktop and tablet landscape displays */  
-  @media screen and (min-width: 960px) and (max-width: 1599px) {
-    margin-left: 2.5rem;
-    margin-top: 12rem;
-  }
+//   /* desktop and tablet landscape displays */  
+//   @media screen and (min-width: 960px) and (max-width: 1599px) {
+//     margin-left: 2.5rem;
+//     margin-top: 12rem;
+//   }
 
-  /* tablet portrait */  
-  @media screen and (min-width: 768px) and (max-width: 959px) {
-    margin-left: 1.75rem;
-    margin-top: 7rem;
-  }
+//   /* tablet portrait */  
+//   @media screen and (min-width: 768px) and (max-width: 959px) {
+//     margin-left: 1.75rem;
+//     margin-top: 7rem;
+//   }
 
-  /* tablet portrait */  
-  @media screen and (min-width: 512px) and (max-width: 767px) {
-    margin-left: 1rem;
-    margin-top: 3rem;
-  }
+//   /* tablet portrait */  
+//   @media screen and (min-width: 512px) and (max-width: 767px) {
+//     margin-left: 1rem;
+//     margin-top: 3rem;
+//   }
 
-  /* mobile */
-  @media screen and (min-width: $mobile-min) and (max-width: 511px) {
-    margin-left: .5rem;
-    margin-top: -.5rem;
-  }
-}
+//   /* mobile */
+//   @media screen and (min-width: $mobile-min) and (max-width: 511px) {
+//     margin-left: .5rem;
+//     margin-top: -.5rem;
+//   }
+// }
 
-.responsive-banner-image {
-    margin-top: -6rem;
+// .responsive-banner-image {
+//     margin-top: -6rem;
 
-    @media screen and (min-width: 959px) and (max-width: 2024px) {
-      margin-top: -8rem;
-    }
+//     @media screen and (min-width: 959px) and (max-width: 2024px) {
+//       margin-top: -8rem;
+//     }
 
-    @media screen and (min-width: 767px) and (max-width: 958px) {
-      margin-top: -4rem;
-    }
+//     @media screen and (min-width: 767px) and (max-width: 958px) {
+//       margin-top: -4rem;
+//     }
 
-    @media screen and (min-width: 512px) and (max-width: 763px) {
-      margin-top: -2rem;
-    }
+//     @media screen and (min-width: 512px) and (max-width: 763px) {
+//       margin-top: -2rem;
+//     }
 
-    @media screen and (min-width: $mobile-min) and (max-width: 511px) {
-      margin-top: -1rem;
-    }
+//     @media screen and (min-width: $mobile-min) and (max-width: 511px) {
+//       margin-top: -1rem;
+//     }
 }
 
 
