--- a/styles/page-header.module.scss
+++ b/styles/page-header.module.scss
@@ -29,7 +29,7 @@
 // Container around pageHeaderContainer to control width
 // *****************************************************************
 .pageHeaderContainerWidth {
-  width: 65%;
+  width: 86%;
   margin: 0 auto 0 auto;  /* keeps it centered */
 
   @media only screen and (min-width: $mobile-min) and (max-width: $mobile-max) {
@@ -59,7 +59,9 @@
   display: flex;
   align-items: center;
   margin-top: -.7rem;
+  margin-right: -5rem;
   min-height: 55px;
+
 
   @media only screen and (max-width: 768px) {
     margin-right: 5%;
@@ -73,6 +75,7 @@
 .topNavLink {
   margin-right: 3rem;
   list-style-type: none;
+  padding: 0 1.5rem;
 
   @media only screen and (max-width: 768px) {
     margin-top: 1rem;
