--- a/styles/blogdetail.module.scss
+++ b/styles/blogdetail.module.scss
@@ -96,6 +96,7 @@ ul > li.squareBullet {
   display: inline-block;
   text-align: justify;
   font-size: 1.2rem;
+  margin-top: 2rem;
   padding: 0 4% 0;  /* same padding s/d be used in h2tag and h3Tag */
 }
 
